--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
         id: check_links
         if: always() && steps.deploy.outcome == 'success'
         uses: peter-evans/link-checker@v1
+        with:
+          args: -d . -r .
       - name: Check link check result
         if: always() && steps.check_links.outcome == 'success'
         run: exit ${{ steps.check_links.outputs.exit_code }}
