--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
       - name: Check HTML5 syntax
         uses: Cyb3r-Jak3/html5validator-action@v0.4.3
         with:
+          root: .
           css: true
       - name: Check links in HTML files
         id: check_links
