--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,7 @@ jobs:
         if: always() && steps.deploy.outcome == 'success'
         run: find -type f -name '*.html' -exec sed -Ei 's@href=(["'\'']?)/?(phpbb|docs|downloads|survey)@href=\1https://dietpi.com/\2@g' {} +
       - name: Check links in HTML and Markdown files
-        id: check_links
         if: always() && steps.workaround_links.outcome == 'success'
-        uses: peter-evans/link-checker@v1
-        with:
-          args: -d . -r .
-      - name: Check link check result
-        if: always() && steps.check_links.outcome == 'success'
-        run: exit ${{ steps.check_links.outputs.exit_code }}
+        run: |
+          GO111MODULE=on go get -u github.com/raviqqe/liche
+          $(go env GOPATH)/bin/liche -d . -r .
