--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,24 +6,40 @@ jobs:
     steps:
       - name: Deploy DietPi-Website locally
         id: deploy
-        run: sudo -E bash -c "$(curl -sSfL https://raw.githubusercontent.com/MichaIng/DietPi-Website${GITHUB_REF#refs/heads}/deploy.bash)" bash .
+        run: bash -c "$(curl -sSfL https://raw.githubusercontent.com/MichaIng/DietPi-Website${GITHUB_REF#refs/heads}/deploy.bash)" bash .
       - name: Check HTML and CSS syntax
         uses: Cyb3r-Jak3/html5validator-action@v0.4.3
         with:
           root: .
           css: true
           extra: '--ignore text-decoration-skip-ink color-adjust overflow-anchor break-word'
-      - name: Check spelling in HTML files
+      - name: Setup Python 3.9 for PySpelling
+        id: python
         if: always() && steps.deploy.outcome == 'success'
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Install PySpelling
+        id: pyspelling
+        if: always() && steps.python.outcome == 'success'
+        run: |
+          pip3 install -U pip setuptools wheel
+          pip3 install -U pyspelling
+          sudo apt-get -q update
+          sudo apt-get -qq --no-install-recommends install aspell aspell-en
+      - name: Check spelling in HTML files
+        if: always() && steps.pyspelling.outcome == 'success'
         # .spellcheck.yml: https://github.com/marketplace/actions/github-spellcheck-action#spellcheck-configuration-file
         # .wordlist.txt
-        uses: rojopolis/spellcheck-github-actions@0.5.0
+        run: pyspelling -vc .spellcheck.yml
       - name: Apply workaround for local links
-        id: workaround_links
+        id: workaround
         if: always() && steps.deploy.outcome == 'success'
         run: find -type f -name '*.html' -exec sed -Ei 's@href=(["'\'']?)/?(phpbb|docs|downloads|survey)@href=\1https://dietpi.com/\2@g' {} +
+      - name: Install liche
+        id: liche
+        if: always() && steps.workaround.outcome == 'success'
+        run: GO111MODULE=on go get -u github.com/raviqqe/liche
       - name: Check links in HTML and Markdown files
-        if: always() && steps.workaround_links.outcome == 'success'
-        run: |
-          GO111MODULE=on go get -u github.com/raviqqe/liche
-          $(go env GOPATH)/bin/liche -v -d . -r .
+        if: always() && steps.liche.outcome == 'success'
+        run: $(go env GOPATH)/bin/liche -v -d . -r .
