--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           pip3 install -U https://github.com/svenkreiss/html5validator/archive/master.tar.gz
       - name: Check HTML, CSS and SVG syntax
         if: always() && steps.html5validator.outcome == 'success'
-        run: html5validator --also-check-css --also-check-svg --show-warnings --ignore text-decoration-skip-ink color-adjust overflow-anchor break-word
+        run: html5validator --also-check-css --also-check-svg --show-warnings --ignore text-decoration-skip-ink color-adjust overflow-anchor break-word aspect-ratio
       - name: Install PySpelling
         id: pyspelling
         if: always() && steps.python.outcome == 'success'
