--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,4 +58,4 @@ jobs:
         rm lychee.tar.gz
     - name: Run lychee to check Markdown and HTML files
       if: always() && steps.lychee.outcome == 'success'
-      run: ./lychee -v -X head -b 'http://127.0.0.1' --exclude 'chrome://gpu' --github-token '${{ secrets.GITHUB_TOKEN }}' '**/*.md' '**/*.html'
+      run: ./lychee -X head -b 'http://127.0.0.1' --exclude 'chrome://gpu' --github-token '${{ secrets.GITHUB_TOKEN }}' '**/*.md' '**/*.html'
