--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         unzip -jo vnu.zip dist/vnu.jar
         rm vnu.zip
     - name: Run Nu Html Checker to check HTML, CSS and SVG files
-      run: find . -type f \( -name '*.html' -o -name '*.css' -o -name '*.svg' \) -exec java -jar vnu.jar --verbose --also-check-css --also-check-svg --filterpattern '.*(text-decoration-skip-ink|color-adjust|overflow-anchor|break-word|aspect-ratio|html).*' {} +
+      run: find . -type f \( -name '*.html' -o -name '*.css' -o -name '*.svg' \) -exec java -jar vnu.jar --verbose --also-check-css --also-check-svg --filterpattern '.*(color-adjust|break-word|html).*' {} +
     - name: Setup Python 3.9 for PySpelling
       id: python
       if: always() && steps.deploy.outcome == 'success'
