--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,27 +8,27 @@ jobs:
     - name: Deploy DietPi-Website locally
       id: deploy
       run: bash -c "$(curl -sSfL https://raw.githubusercontent.com/MichaIng/DietPi-Website${GITHUB_REF#refs/heads}/deploy.bash)" bash .
-    - name: Setup JRE 16 for Nu Html Checker
+    - name: Setup JRE for Nu Html Checker
       # https://github.com/actions/setup-java/releases
       uses: actions/setup-java@v2
       with:
-        distribution: 'zulu'
-        # http://static.azul.com/zulu/bin/
-        java-version: '16'
+        distribution: 'temurin'
+        # https://github.com/adoptium
+        java-version: '17'
         java-package: jre
         check-latest: true
     - name: Download Nu Html Checker
       run: curl -sSfLO 'https://github.com/validator/validator/releases/download/latest/vnu.jar'
     - name: Run Nu Html Checker to check HTML, CSS and SVG files
-      run: find . -type f \( -name '*.html' -o -name '*.css' -o -name '*.svg' \) -exec java -jar vnu.jar --verbose --also-check-css --also-check-svg --filterpattern '.*(color-adjust|break-word|html).*' {} +
-    - name: Setup Python 3.9 for PySpelling
+      run: find . -type f \( -name '*.html' -o -name '*.css' -o -name '*.svg' \) -exec java -jar vnu.jar --verbose --also-check-css --also-check-svg {} +
+    - name: Setup Python for PySpelling
       id: python
       if: always() && steps.deploy.outcome == 'success'
       # https://github.com/actions/setup-python/releases
       uses: actions/setup-python@v2
       with:
         # https://github.com/actions/python-versions/releases
-        python-version: '3.9'
+        python-version: '3.10'
     - name: Install PySpelling
       id: pyspelling
       if: always() && steps.python.outcome == 'success'
