--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         distribution: 'temurin'
         # https://github.com/adoptium
-        java-version: '16'
+        java-version: '17-ea'
         java-package: jre
         check-latest: true
     - name: Download Nu Html Checker
@@ -28,7 +28,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         # https://github.com/actions/python-versions/releases
-        python-version: '3.9'
+        python-version: '3.10.0-rc.1 - 3.10'
     - name: Install PySpelling
       id: pyspelling
       if: always() && steps.python.outcome == 'success'
