--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Download Nu Html Checker
       run: curl -sSfLO 'https://github.com/validator/validator/releases/download/latest/vnu.jar'
     - name: Run Nu Html Checker to check HTML, CSS and SVG files
-      run: find . -type f \( -name '*.html' -o -name '*.css' -o -name '*.svg' \) -exec java -jar vnu.jar --verbose --also-check-css --also-check-svg --filterpattern '.*“(break-word|html)”.*' {} +
+      run: find . -type f \( -name '*.html' -o -name '*.css' -o -name '*.svg' \) -exec java -jar vnu.jar --verbose --also-check-css --also-check-svg --filterpattern '.*“break-word”.*' {} +
     - name: Setup Python for PySpelling
       id: python
       if: always() && steps.deploy.outcome == 'success'
@@ -55,4 +55,4 @@ jobs:
         rm lychee.tar.gz
     - name: Run lychee to check Markdown and HTML files
       if: always() && steps.lychee.outcome == 'success'
-      run: ./lychee -X head -b 'http://127.0.0.1' --exclude 'chrome://gpu' --github-token '${{ secrets.GITHUB_TOKEN }}' '**/*.md' '**/*.html'
+      run: ./lychee -X head -b 'http://127.0.0.1' --github-token '${{ secrets.GITHUB_TOKEN }}' '**/*.md' '**/*.html'
