--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,19 +40,10 @@ jobs:
     - name: Run PySpelling to check HTML files
       if: always() && steps.pyspelling.outcome == 'success'
       run: pyspelling -vc .spellcheck.yml
-    - name: Setup Nginx for lychee
-      id: nginx
-      if: always() && steps.deploy.outcome == 'success'
-      run: |
-        sudo sed -i "/^[[:blank:]]*root[[:blank:]]/c\root $(pwd);" /etc/nginx/sites-available/default
-        sudo systemctl restart nginx
-    - name: Download lychee
+    - name: Build lychee
       id: lychee
       if: always() && steps.nginx.outcome == 'success'
-      run: |
-        curl -sSfL "$(curl -sSfL https://api.github.com/repos/lycheeverse/lychee/releases/latest | mawk -F\" '/"browser_download_url.*x86_64-unknown-linux-gnu\.tar\.gz"/{print $4;exit}')" -o lychee.tar.gz
-        tar xf lychee.tar.gz
-        rm lychee.tar.gz
+      run: cargo install --git https://github.com/lycheeverse/lychee --branch local-files
     - name: Run lychee to check Markdown and HTML files
       if: always() && steps.lychee.outcome == 'success'
-      run: ./lychee -X head -b 'http://127.0.0.1' --github-token '${{ secrets.GITHUB_TOKEN }}' '**/*.md' '**/*.html'
+      run: lychee -X head -b '.' --github-token '${{ secrets.GITHUB_TOKEN }}' '**/*.md' '**/*.html'
