--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,4 @@ jobs:
       run: cargo install --git https://github.com/lycheeverse/lychee
     - name: Run lychee to check Markdown and HTML files
       if: always() && steps.lychee.outcome == 'success'
-      run: lychee -X head -b '.' --github-token '${{ secrets.GITHUB_TOKEN }}' -v --no-progress '**/*.md' '**/*.html'
+      run: lychee -Env --require-https --github-token '${{ secrets.GITHUB_TOKEN }}' -X head -b '.' '**/*.md' '**/*.html'
