--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,14 @@ jobs:
     steps:
     - name: Deploy DietPi-Website locally
       id: deploy
-      run: bash -c "$(curl -sSfL https://raw.githubusercontent.com/MichaIng/DietPi-Website${GITHUB_REF#refs/heads}/deploy.bash)" bash .
+      run: bash -c "$(curl -sSL "https://raw.githubusercontent.com/MichaIng/DietPi-Website${GITHUB_REF#refs/heads}/deploy.bash")" bash .
     - name: Setup JRE for Nu Html Checker
       # https://github.com/actions/setup-java/releases
       uses: actions/setup-java@v2
       with:
         distribution: 'temurin'
         # https://github.com/adoptium
-        java-version: '17-ea'
+        java-version: '17'
         java-package: jre
         check-latest: true
     - name: Download Nu Html Checker
@@ -28,14 +28,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         # https://github.com/actions/python-versions/releases
-        python-version: '3.10.0-rc.1 - 3.10'
+        python-version: '3.10'
     - name: Install PySpelling
       id: pyspelling
       if: always() && steps.python.outcome == 'success'
       run: |
-        pip3 install -U pip setuptools wheel
-        pip3 install -U pyspelling
+        pip3 install -U pip setuptools wheel &
         sudo apt-get -q update
+        pip3 install -U pyspelling &
         sudo apt-get -qq --no-install-recommends install aspell-en
     - name: Run PySpelling to check HTML files
       if: always() && steps.pyspelling.outcome == 'success'
