--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         distribution: 'temurin'
         # https://github.com/adoptium
-        java-version: '17'
+        java-version: '17-ea'
         java-package: jre
         check-latest: true
     - name: Download Nu Html Checker
@@ -33,10 +33,8 @@ jobs:
       id: pyspelling
       if: always() && steps.python.outcome == 'success'
       run: |
-        pip3 install -U pip setuptools wheel &
-        sudo apt-get -q update
-        pip3 install -U pyspelling &
-        sudo apt-get -qq --no-install-recommends install aspell-en
+        { pip3 install -U pip setuptools wheel; pip3 install -U pyspelling; } &
+        { sudo apt-get -q update; sudo apt-get -qq --no-install-recommends install aspell-en; }
     - name: Run PySpelling to check HTML files
       if: always() && steps.pyspelling.outcome == 'success'
       run: pyspelling -vc .spellcheck.yml
