Revert some unnecessary syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,8 @@ jobs:
       if: always() && steps.python.outcome == 'success'
       run: |
         { pip3 install -U pip setuptools wheel; pip3 install -U pyspelling; } &
-        { sudo apt-get -q update; sudo apt-get -qq --no-install-recommends install aspell-en; }
+        sudo apt-get -q update
+        sudo apt-get -qq --no-install-recommends install aspell-en
     - name: Run PySpelling to check HTML files
       if: always() && steps.pyspelling.outcome == 'success'
       run: pyspelling -vc .spellcheck.yml
