--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
       with:
         distribution: 'temurin'
         # https://github.com/adoptium
-        java-version: '18'
-        #java-package: jre
+        java-version: '19'
+        java-package: jre
         check-latest: true
     - name: Download Nu Html Checker
       run: curl -sSfLO 'https://github.com/validator/validator/releases/download/latest/vnu.jar'
