--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,15 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  Actions:
+  main:
     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.owner.login != github.event.pull_request.base.repo.owner.login
-    # https://github.com/actions/virtual-environments
+    # https://github.com/actions/runner-images
     runs-on: ubuntu-22.04
     env:
       HEAD_OWNER: ${{ github.event.pull_request.head.repo.owner.login }}
+    defaults:
+      run:
+        working-directory: /dev/shm
     steps:
     - name: Deploy DietPi-Website locally
       id: deploy
