--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         # https://github.com/actions/python-versions/releases
-        python-version: '3.10'
+        python-version: '3.11'
     - name: Install PySpelling
       id: pyspelling
       if: always() && steps.python.outcome == 'success'
@@ -56,4 +56,4 @@ jobs:
         tar xf lychee.tar.gz
     - name: Run lychee to check Markdown and HTML files
       if: always() && steps.lychee.outcome == 'success'
-      run: ./lychee -En --cache --require-https --github-token '${{ secrets.GITHUB_TOKEN }}' -X head -b '.' '**/*.md' '**/*.html'
+      run: ./lychee -En --cache --require-https --github-token '${{ secrets.GITHUB_TOKEN }}' -b '.' '**/*.md' '**/*.html'
