--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,11 @@ jobs:
     - name: Download Nu Html Checker
       run: curl -sSfLO 'https://github.com/validator/validator/releases/download/latest/vnu.jar'
     - name: Run Nu Html Checker to check HTML, CSS and SVG files
-      run: find . -type f ! -name 'bootstrap.min.css' -a \( -name '*.html' -o -name '*.css' -o -name '*.svg' \) -exec java -jar vnu.jar --verbose --also-check-css --also-check-svg {} +
+      run: |
+        java -jar vnu.jar --verbose *.html
+        GLOBIGNORE='css/bootstrap.min.css'
+        java -jar vnu.jar --css --verbose css/*.css
+        java -jar vnu.jar --skip-non-svg --verbose .
     - name: Setup Python for PySpelling
       id: python
       if: always() && steps.deploy.outcome == 'success'
