--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,11 @@ jobs:
     - name: Check for obsolete image files
       if: always() && steps.deploy.outcome == 'success'
       run: |
-        while read -r line; do [ $line != ${line#images/dietpi-logo_} ] || grep -rq "$line" *.html || { error=1; echo "ERROR: $line is not used"; }; done << _EOF_
+        ec=0
+        while read -r line; do [ $line != ${line#images/dietpi-logo_} ] || grep -rq "$line" *.html || { ec=1; echo "ERROR: $line is not used"; }; done << _EOF_
         $(find images/ -type f)
         _EOF_
-        [ "$error" = 1 ] && exit 1
+        exit "$ec"
     - name: Setup Python for PySpelling
       id: python
       if: always() && steps.deploy.outcome == 'success'
