--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         # https://github.com/actions/python-versions/tags
-        python-version: '3.11'
+        python-version: '3.x'
         check-latest: true
     - name: Install PySpelling
       id: pyspelling
