--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,5 +60,5 @@ jobs:
         tar xf lychee.tar.gz
     - name: Run lychee to check Markdown and HTML files
       if: always() && steps.lychee.outcome == 'success'
-      # twitter.com/DietPi_|www.patreon.com/DietPi: Network error: Forbidden
-      run: ./lychee -En --cache --require-https --include-fragments --exclude '^https://(twitter.com/DietPi_|www.patreon.com/DietPi)$' --github-token '${{ secrets.GITHUB_TOKEN }}' -b '.' '**/*.md' '**/*.html'
+      # x.com/DietPi_|www.patreon.com/DietPi: Network error: Forbidden
+      run: ./lychee -En --cache --require-https --include-fragments --exclude '^https://(x.com/DietPi_|www.patreon.com/DietPi)$' --github-token '${{ secrets.GITHUB_TOKEN }}' -b '.' '**/*.md' '**/*.html'
